# Distributed_Systems_lab1

./: CMakeLists.txt
include/: process.h
pa2/: banking.c  banking.h  ipc.c  main.c  process.c  process.h
pa3/: banking.h  process.c  process.h
pa4/: ipc.c  main.c  priority_queue.c  priority_queue.h  process.c  process.h
pa5/: ipc.c  process.c
src/: bank_robbery.c  banking.c  ipc.c  main.c  process.c
